# TFM

ardrone_helpers/ardrone_joystick/: CMakeLists.txt  package.xml
ardrone_helpers/ardrone_joystick/.svn/: wc.db
ardrone_helpers/ardrone_joystick/launch/: dual_teleop.launch  prueba_teleop.launch  teleop.launch
ardrone_helpers/ardrone_joystick/src/: main.cpp
ardrone_helpers/teleop_simulation/: CMakeLists.txt  manifest.xml  package.xml
ardrone_helpers/teleop_simulation/.svn/: wc.db
ardrone_helpers/teleop_simulation/launch/: ard2_teleop.launch  lrr_ardrone_driver.launch  lrr_ardrone_driver_agressive.launch  lrr_ardrone_driver_v1_0.launch  lsr_ardrone_driver.launch  lsr_ardrone_driver_agressive.launch  teleoperacion_pura.launch
ardrone_helpers/teleop_simulation/src/: main.cpp  rosaria_publisher.cpp  teleop_dual.cpp  teleop_gazebo.cpp  teleoperacion_pura.cpp
ardrone_helpers/teleop_simulation/src/00_Borrador/: main_v1_1.cpp  main_v1_2.cpp  main_v1_3.cpp  main_v1_4.cpp  main_v1_6.cpp
homer_robot_platform/: CMakeLists.txt  package.xml
homer_robot_platform/arduino code/PioneerControlSketchv3/: PioneerControlSketchv3.ino
homer_robot_platform/arduino code/PioneerControlSketchv3_L296N/: PioneerControlSketchv3_L296N.ino
homer_robot_platform/arduino code/libraries/DualVNH5019MotorShield/: DualVNH5019MotorShield.cpp
homer_robot_platform/arduino code/libraries/ros_lib/digicam/: CaptureImage.h
homer_robot_platform/arduino code/libraries/ros_lib/face_detection/: FaceDetectionResult.h
homer_robot_platform/arduino code/libraries/ros_lib/followme_control_node/: FollowingStateM.h  StartFollowingM.h
homer_robot_platform/arduino code/libraries/ros_lib/hardware_state/: HardwareState.h
homer_robot_platform/arduino code/libraries/ros_lib/jack_client_msgs/: AudioRecordingM.h
homer_robot_platform/arduino code/libraries/ros_lib/katana_gripping_msgs/: GripObject.h  GrippingFinished.h  GrippingState.h  SetArmPose.h
homer_robot_platform/arduino code/libraries/ros_lib/katana_msgs/: EmergencyStopM.h  PathNodeM.h  RobotArmControlM.h  RobotArmInfoM.h  RobotArmLinearMoveM.h  RobotArmMoveAxisM.h  RobotArmMoveFinishedM.h  RobotArmMoveM.h  RobotArmPathM.h  RobotArmStateM.h  RobotDataM.h  WarningStateM.h  testmessage1.h
homer_robot_platform/arduino code/libraries/ros_lib/leg_detection_msgs/: ArcSegment.h  ArcSegmentsList.h  DetectedLegs.h  LaserSegment.h  LaserSegmentsList.h
homer_robot_platform/arduino code/libraries/ros_lib/mapnav_msgs/: DeletePointOfInterest.h  DoMapping.h  GetPointsOfInterest.h  MapLayers.h  ModifyMap.h  ModifyPOI.h  NavigateToPOI.h  PointOfInterest.h  PointsOfInterest.h  SaveMap.h  StartNavigation.h  StopNavigation.h  TargetUnreachable.h
homer_robot_platform/arduino code/libraries/ros_lib/object_detection/: DetectObjects.h  DetectedObjects.h  DetectedPlanes.h  Object.h  SupportPlane.h
homer_robot_platform/arduino code/libraries/ros_lib/or_msgs/: BoundingBox2D.h  ExtractKeyPoints.h  KeyPoint.h  KeyPointMatch.h  KeyPointMatchArray.h  MatchResult.h  OrCommand.h  OrImage.h  OrLearnCommand.h  OrLearningStatus.h  OrMatchResult.h  OrObjectNames.h  Point2D.h  RecognizeImage.h  VectorObject2D.h
homer_robot_platform/arduino code/libraries/ros_lib/pcl_people_detection/: DetectedPeople.h  DetectedPerson.h
homer_robot_platform/arduino code/libraries/ros_lib/people_tracking_msgs/: TrackedPeople.h  TrackedPerson.h
homer_robot_platform/arduino code/libraries/ros_lib/person_detection_msgs/: personDetectionMSG.h
homer_robot_platform/arduino code/libraries/ros_lib/ptu/: CenterWorldPoint.h  SetPanTilt.h
homer_robot_platform/arduino code/libraries/ros_lib/ptu_person_detection/: ptu_detected_persons.h  ptu_search_persons.h
homer_robot_platform/arduino code/libraries/ros_lib/robot_face/: ImageDisplay.h  ImageFileDisplay.h
homer_robot_platform/arduino code/libraries/ros_lib/robot_platform/: Calibrate.h  EncoderValues.h  MoveFinished.h  MoveRobot.h  ResetRobot.h  RobotData.h  RobotState.h  SendMessage.h  SetTaskSpeedFast.h  SetTaskSpeedMiddle.h  SetTaskSpeedSlow.h  StopRobot.h  TurnFinished.h  TurnRobot.h
homer_robot_platform/arduino code/libraries/ros_lib/selfawareness_node/: CheckKatana.h  PointCloudRobotCoord.h  SelfawarenessStatus.h
homer_robot_platform/arduino code/libraries/ros_lib/semantic_knowledgebase_messages/: LoadNewSemanticKB.h  SemanticQuery.h  SemanticQueryAllChildren.h  SemanticQueryAllDirectChildren.h  SemanticQueryAllLeaves.h  SemanticQueryAllParents.h  SemanticQueryAllSiblings.h  SemanticQueryAreSiblings.h  (+6 more)
homer_robot_platform/config/: pioneer.yaml
homer_robot_platform/launch/: pioneer.launch
homer_robot_platform/msg/: QuadEncoderValues.msg  RobotState.msg
homer_robot_platform/src/: enc_to_odom.cpp
homer_robot_platform/udev/: 70-arduino.rules
vision/: CMakeLists.txt  COMANDO_DE_USO  UserCommands  package.xml
vision/cfg/: TrackingReal.cfg
vision/include/vision/: ardrone_teleop.hpp  cancel_hovering.hpp
vision/include/vision/platform_detection/: platform_detection_real.hpp
vision/include/vision/platform_tracking/: platform_tracking_real.hpp
vision/include/vision/pos_transformer/: pos_transformer_real.hpp
vision/launch/: ardrone_setup.launch  ardrone_teleop.launch  cancel_hovering.launch  indicator_detection.launch
vision/launch/platform_detection/: platform_detection_prueba.launch  platform_detection_real.launch  platform_detection_real_aruco.launch
vision/launch/platform_tracking/: platform_tracking_real.launch
vision/launch/pos_transformer/: pos_transformer_real.launch
vision/rviz_config/: realNoPRed.rviz  realNoPred.rviz
vision/src/: ardrone_teleop.cpp  cancel_hovering.cpp  platform_tracking.cpp  pos_transformer_real.cpp
vision/src/platform_detection/: centroide.cpp.simulacion  indicator_detection.cpp  platform_detection_real.cpp  platform_detection_real.cpp.intento
vision/src/platform_tracking/: platform_tracking_real.cpp
vision/src/pos_transformer/: pos_transformer_real.cpp
vision/src/various/: color_detection.cpp  summit_detection.cpp.funciona  summit_tracking.cpp.bueno  summit_tracking.cpp.despegue
(+130 files in other folders)
